# maximus

./: .gitignore  CLAUDE.md  GETTING_STARTED.md  PROJECT_SPEC.md  QUICK_REFERENCE.md  README.md  init-maximus.sh  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml  ci.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cli.rs  lib.rs  main.rs
src-tauri/src/commands/: analytics.rs  claude_code.rs  github.rs  hooks.rs  memory.rs  mod.rs  projects.rs  prompts.rs  pty.rs  quick_commands.rs  session_memory.rs  sessions.rs  snapshots.rs  sync.rs  tray.rs
src-tauri/src/db/: mod.rs
src-tauri/src/git/: mod.rs
src-tauri/src/pty/: claude_parser.rs  mod.rs  semantic_parser.rs
src-tauri/src/tray/: mod.rs
src/components/bottom-bar/: BottomBar.tsx
src/components/command-palette/: CommandPalette.tsx
src/components/dashboard/: FileExplorer.tsx  ProjectCard.tsx  QuickActions.tsx  RecentSessions.tsx  UsageCard.tsx  WelcomeBack.tsx
src/components/help/: HelpModal.tsx  (+1 more)
src/hooks/: useAnalytics.ts  useClaudeCode.ts  useClaudeState.ts  useFailedApproaches.ts  useGitHub.ts  useKeyboardShortcuts.ts  useMemory.ts  useProjects.ts  usePrompts.ts  useQuickCommands.ts  useSemanticBlocks.ts  useSessionMemory.ts  useSessions.ts  useSnapshots.ts  useTray.ts  useTrayEvents.ts
src/lib/: riskyCommands.ts  tauri.ts  utils.ts
src/pages/: Analytics.tsx  Dashboard.tsx  Memory.tsx  Prompts.tsx  Snapshots.tsx  TerminalPage.tsx
src/stores/: appStore.ts  projectStore.ts  sessionStore.ts  settingsStore.ts  terminalStore.ts
(+25 files in other folders)
